--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,6 +1,6 @@
 *{
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
     
 }
 /* Common Shared Style */
@@ -18,14 +18,18 @@ body{
     padding: 15px 35px;
        
 }
-
-
+.main_container{
+    background: #FFF8F3;
+   
+}
 
 /* Nav Related Style*/
 .nav_container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin:0 200px;
+    
 
 }
 .nav_title{
@@ -55,5 +59,29 @@ body{
 .menu_items li a{
     text-decoration: none;
     color: #474747;
+
+}
+/* Banner Related Style*/
+.banner_container{
+    display: flex;
+    align-items: center;
+    padding: 30px 30px 30px 150px;
+
+    
+}
+.banner_content{
+
+}
+.banner_greeding{
+
+}
+.banner_title{
+
+}
+.banner_description{
+
+}
+.banner_img{
+    width: 500px;
 
 }
