--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -32,7 +32,7 @@ body{
     font-weight: 400;
 
 }
-.main_container{
+.header_container{
     background: #FFF8F3;
     background: url(../images/header_bg.png);
     background-repeat: no-repeat;
@@ -115,7 +115,11 @@ body{
     width: 500px;
 
 }
-/* Main Section Styles*/ 
+/* Main Section Styles*/
+.main_container{
+    max-width: 1140px;
+    margin: 0 auto;
+} 
 /* About Section Styles*/ 
 .about_container{
     padding: 130px;
@@ -128,5 +132,31 @@ body{
     
 }
 .section_description{
+
+}
+
+.about_info_container{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.about_info{
+    
+    
+    
+
+
+}
+.info_title{
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+
+}
+.info_descrption{
+    color: #474747;
+    font-size: 20px;
+    font-weight: 700;
 
 }
